<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">智能转发系统</string>
    
    <string name="send_msg">发送短信</string>
    <string name="reply_msg">回复短信</string>
    <string name="inbox">收件箱</string>
    <string name="outbox">发件箱</string>
    
    <string name="main_content">智能转发系统:通信套件(SFS_A)</string>
    <string name="center_content">智能转发系统:中转套件</string>
    <string name="no_password_tips">注意:如无密码，请与管理员联系</string>
    <string name="back_tips">如果返回，已编辑内容将被丢弃，确认返回？</string>
    
    <string name="password_txt">请输入配置软件的登陆密码</string>
    
    <string name="login">登录密码</string>
    <string name="password">密码</string>
    <string name="setting">设置</string>
    
    <string name="btn_cancel">取消</string>
    <string name="btn_back">返回</string>
    <string name="btn_ok">确定</string>
    <string name="btn_login">登录</string>
    <string name="btn_send">发送</string>
    <string name="btn_delete">删除</string>
    <string name="btn_reply">回复</string>
    
    <string name="tips_msg_count">0/70</string>
    <string name="tips_new_msg">有新信息</string>
    
    <string name="error_password">密码错误，请联系管理员</string>
    <string name="empty_password">密码不能为空</string>
    <string name="password_error_too_many">您已连续三次输入错误，软件将退出！</string>
    <string name="send_content_empty">发送内容不能为空!</string>
    <string name="send_content_too_long">发送内容过长!</string>
    <string name="send_content_success">短信发送成功</string>
    
    <string name="internal_password">123456</string>
    <string name="extend_category">中转号码设置</string>
    <string name="target_num">电话号码</string>
    <string name="title_convert">中转中心电话列表:%s</string>
    <string name="add_target">增加发送目标</string>
    <string name="delete_tips">是否删除此电话号码?</string>
    <string name="add_error_tips">输入的电话号码错误,请从新输入.</string>
    
    <string name="tips_title">中转中心提示</string>
    <string name="tips_success">中转中心启动成功</string>
    <string name="tips_failed">中转中心启动失败</string>
    
    <string name="config_not_find_title">未发现配置文件</string>
    <string name="config_not_find">配置文件未找到,请将配置文件放在SDCARD中,或是启动配置工具进行配置.</string>
    
    <string name="confirm_error">拒绝进入软件，请与管理员联系</string>
    
    <string name="pref_phone_num">phone_num</string>
    <string name="pref_target_list_cdma">target_list_cdma</string>
    <string name="pref_target_list_gsm">target_list_gsm</string>
    <string name="pref_is_center">is_center</string>
    <string name="target_number">target_center</string>
    
    <string name="cdma">CDMA</string>
    <string name="cdma_log">CDMA接收日志</string>
    <string name="gsm_log">GSM接收日志</string>
    <string name="gsm">GSM</string>
    
    <string name="time_format" formatted="false">发送时间:%s</string>
    <string name="time_format_inbox" formatted="false">接收时间:%s</string>
    <string name="content" formatted="false">%s</string>
    
</resources>
